--- a/src/components/rightBar/rightBar.scss
+++ b/src/components/rightBar/rightBar.scss
@@ -22,6 +22,7 @@
 
     .container {
       padding: 20px;
+      
 
       .item {
         -webkit-box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
@@ -30,7 +31,7 @@
         padding: 20px;
         margin-bottom: 20px;
         background-color: themed("bg");
-
+        border-radius: 20px;
         span {
           color: gray;
         }
@@ -81,16 +82,17 @@
 
             button {
               border: none;
-              padding: 5px;
+              padding: 5px 25px;
               color: white;
               cursor: pointer;
+              border-radius: 20px;
 
               &:first-child {
                 background-color: #5271ff;
               }
 
               &:last-child {
-                background-color: #f0544f;
+                background-color: #ff1744;
               }
             }
           }
