--- a/src/components/share/share.scss
+++ b/src/components/share/share.scss
@@ -68,11 +68,11 @@
         .right {
           button {
             border: none;
-            padding: 5px;
+            padding: 5px 25px;
             color: white;
             cursor: pointer;
-            background-color: #5271ff;
-            border-radius: 3px;
+            background-color:#3f51b5;
+            border-radius: 20px;
           }
         }
       }
